updated mod Advent Of Ascension 3

--- a/1.12.2-injectors/aoa3/assets/aoa3/lang/guides/ru_ru/blood_hunt.txt
+++ b/1.12.2-injectors/aoa3/assets/aoa3/lang/guides/ru_ru/blood_hunt.txt
@@ -1,10 +1,10 @@
-Кровавая охота (Событие)
+РљСЂРѕРІР°РІР°СЏ РѕС…РѕС‚Р° (РЎРѕР±С‹С‚РёРµ)
 
-"Охота за кровью началась!"
-Берегитесь, искатели приключений, кровавая охота уже близко.
-Кровавая охота - это событие, которое может произойти в некоторые из ночей в Обычном мире. Когда оно начнётся, Вы получите сообщение, которое написано выше - сигнал к тому, что нужно прятаться!
+"РћС…РѕС‚Р° Р·Р° РєСЂРѕРІСЊСЋ РЅР°С‡Р°Р»Р°СЃСЊ!"
+Р‘РµСЂРµРіРёС‚РµСЃСЊ, РёСЃРєР°С‚РµР»Рё РїСЂРёРєР»СЋС‡РµРЅРёР№, РєСЂРѕРІР°РІР°СЏ РѕС…РѕС‚Р° СѓР¶Рµ Р±Р»РёР·РєРѕ.
+РљСЂРѕРІР°РІР°СЏ РѕС…РѕС‚Р° - СЌС‚Рѕ СЃРѕР±С‹С‚РёРµ, РєРѕС‚РѕСЂРѕРµ РјРѕР¶РµС‚ РїСЂРѕРёР·РѕР№С‚Рё РІ РЅРµРєРѕС‚РѕСЂС‹Рµ РёР· РЅРѕС‡РµР№ РІ РћР±С‹С‡РЅРѕРј РјРёСЂРµ. РљРѕРіРґР° РѕРЅРѕ РЅР°С‡РЅС‘С‚СЃСЏ, Р’С‹ РїРѕР»СѓС‡РёС‚Рµ СЃРѕРѕР±С‰РµРЅРёРµ, РєРѕС‚РѕСЂРѕРµ РЅР°РїРёСЃР°РЅРѕ РІС‹С€Рµ - СЃРёРіРЅР°Р» Рє С‚РѕРјСѓ, С‡С‚Рѕ РЅСѓР¶РЅРѕ РїСЂСЏС‚Р°С‚СЊСЃСЏ!
 
-Во время кровавой охоты враждебные существа, порождённые в Бездне, вырываются из своего мира в наш, стремясь устлать всё кровью заплутавших авантюристов.
-Но не волнуйтесь, они не хотят испить вашей крови, лишь покрыть ею траву, по которой вы идёте, и отпраздновать вашу кончину.
+Р’Рѕ РІСЂРµРјСЏ РєСЂРѕРІР°РІРѕР№ РѕС…РѕС‚С‹ РІСЂР°Р¶РґРµР±РЅС‹Рµ СЃСѓС‰РµСЃС‚РІР°, РїРѕСЂРѕР¶РґС‘РЅРЅС‹Рµ РІ Р‘РµР·РґРЅРµ, РІС‹СЂС‹РІР°СЋС‚СЃСЏ РёР· СЃРІРѕРµРіРѕ РјРёСЂР° РІ РЅР°С€, СЃС‚СЂРµРјСЏСЃСЊ СѓСЃС‚Р»Р°С‚СЊ РІСЃС‘ РєСЂРѕРІСЊСЋ Р·Р°РїР»СѓС‚Р°РІС€РёС… Р°РІР°РЅС‚СЋСЂРёСЃС‚РѕРІ.
+РќРѕ РЅРµ РІРѕР»РЅСѓР№С‚РµСЃСЊ, РѕРЅРё РЅРµ С…РѕС‚СЏС‚ РёСЃРїРёС‚СЊ РІР°С€РµР№ РєСЂРѕРІРё, Р»РёС€СЊ РїРѕРєСЂС‹С‚СЊ РµСЋ С‚СЂР°РІСѓ, РїРѕ РєРѕС‚РѕСЂРѕР№ РІС‹ РёРґС‘С‚Рµ, Рё РѕС‚РїСЂР°Р·РґРЅРѕРІР°С‚СЊ РІР°С€Сѓ РєРѕРЅС‡РёРЅСѓ.
 
-Существа из бездны предпочитают оставаться в темноте, поэтому, как только взойдёт солнце, они перестанут толпами врываться в наш мир, завершив свою кровавую охоту до тех пор, пока они не смогут прорваться вновь.
+РЎСѓС‰РµСЃС‚РІР° РёР· Р±РµР·РґРЅС‹ РїСЂРµРґРїРѕС‡РёС‚Р°СЋС‚ РѕСЃС‚Р°РІР°С‚СЊСЃСЏ РІ С‚РµРјРЅРѕС‚Рµ, РїРѕСЌС‚РѕРјСѓ, РєР°Рє С‚РѕР»СЊРєРѕ РІР·РѕР№РґС‘С‚ СЃРѕР»РЅС†Рµ, РѕРЅРё РїРµСЂРµСЃС‚Р°РЅСѓС‚ С‚РѕР»РїР°РјРё РІСЂС‹РІР°С‚СЊСЃСЏ РІ РЅР°С€ РјРёСЂ, Р·Р°РІРµСЂС€РёРІ СЃРІРѕСЋ РєСЂРѕРІР°РІСѓСЋ РѕС…РѕС‚Сѓ РґРѕ С‚РµС… РїРѕСЂ, РїРѕРєР° РѕРЅРё РЅРµ СЃРјРѕРіСѓС‚ РїСЂРѕСЂРІР°С‚СЊСЃСЏ РІРЅРѕРІСЊ.
