updated Advent Of Ascension 3 injector and resources

--- a/1.12.2-injectors/aoa3/assets/aoa3/lang/guides/ru_ru/blood_hunt.txt
+++ b/1.12.2-injectors/aoa3/assets/aoa3/lang/guides/ru_ru/blood_hunt.txt
@@ -5,6 +5,6 @@
 Кровавая охота - это событие, которое может произойти в некоторые из ночей в Обычном мире. Когда оно начнётся, Вы получите сообщение, которое написано выше - сигнал к тому, что нужно прятаться!
 
 Во время кровавой охоты враждебные существа, порождённые в Бездне, вырываются из своего мира в наш, стремясь устлать всё кровью заплутавших авантюристов.
-Но не волнуйтесь, они не хотят испить вашей крови, лишь покрыть ею траву, по которой вы идёте, и отпраздновать вашу кончину.
+Но не волнуйтесь, они не хотят испить вашей крови, они лишь желают покрыть ею траву, по которой вы идёте, и отпраздновать вашу кончину.
 
-Существа из бездны предпочитают оставаться в темноте, поэтому, как только взойдёт солнце, они перестанут толпами врываться в наш мир, завершив свою кровавую охоту до тех пор, пока они не смогут прорваться вновь.
+Существа из бездны предпочитают оставаться в темноте, поэтому, как только взойдёт солнце, они перестанут толпами врываться в наш мир, завершив свою кровавую охоту до тех пор, пока не смогут прорваться вновь.
